# csg

./: .hgignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  csg.cabal  cube.geo  package.yaml  stack-previous.yaml  stack.yaml
.github/workflows/: ci.yaml
benchmark/: Benchmark.hs
examples/: cube.geo  reentry.geo
exe/: raycaster.hs
src/: Raycaster.hs
src/Data/: CSG.hs
src/Data/CSG/: Parser.hs  Util.hs
src/Graphics/: CSG.hs
src/Graphics/CSG/: Parser.hs  Util.hs
tests/: Main.hs
