name:                csg
version:             0.1.0.0
synopsis:            Analytical CSG (Constructive Solid Geometry) library
-- description:
homepage:            http://github.com/dzhus/csg/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: http://github.com/dzhus/csg/

library
  ghc-options: -Wall -O2 -fllvm

  hs-source-dirs: src

  exposed-modules:
    Data.CSG
    Data.CSG.Parser

  other-modules:
    Data.CSG.Util

  build-depends:
    attoparsec          == 0.10.*,
    base                == 4.6.*,
    bytestring          == 0.10.*,
    containers          == 0.5.*,
    simple-vec3         == 0.2.*,
    strict              == 0.3.*,
    transformers        == 0.3.*
